Remove initial flash sequence, flash 10 beats in chronological order - Update version to v1.0.5

--- a/unit-tests.html
+++ b/unit-tests.html
@@ -275,7 +275,7 @@
         </div>
         </div>
     </section>
-    <div id="version">v1.0.4</div>
+    <div id="version">v1.0.5</div>
   </div>
 
 <script>
@@ -711,29 +711,8 @@ function showCompletion(){
   const rightText = `Complete - ${totalQuestions}/${totalQuestions}`;
   setMeta(leftText, rightText);
   
-  // Start the completion light show
-  playCompletionLightShow();
-}
-
-function playCompletionLightShow(){
-  const correctPill = els.correctCount.parentElement;
-  const wrongPill = els.wrongCount.parentElement;
-  const streakPill = els.streakCount.parentElement;
-  const greenColor = "rgba(0, 255, 160, .35)";
-  const redColor = "rgba(255, 80, 80, .35)";
-  
-  // First: Flash unit and question count 10 times
-  let flashCount = 0;
-  const unitFlashInterval = setInterval(() => {
-    flashElement(els.metaLeft, greenColor, 400);
-    flashElement(els.metaRight, greenColor, 400);
-    flashCount++;
-    if (flashCount >= 10) {
-      clearInterval(unitFlashInterval);
-      // After unit flashes, start replaying answer history
-      setTimeout(() => replayAnswerHistory(), 500);
-    }
-  }, 450);
+  // Start the completion light show - replay all answers in chronological order
+  replayAnswerHistory();
 }
 
 function replayAnswerHistory(){
