Add Memory Match game to launchpad with local images

--- a/launchpad.html
+++ b/launchpad.html
@@ -116,6 +116,10 @@
         <span class="app-icon">🧪</span>
       </a>
 
+      <a href="memory-match.html" class="app-card" style="text-decoration: none; color: inherit;">
+        <span class="app-icon">🧠</span>
+      </a>
+
       <div class="app-card disabled" style="text-decoration: none; color: inherit;">
       </div>
     </div>
