Add Roblox English slideshow

--- a/launchpad.html
+++ b/launchpad.html
@@ -120,6 +120,10 @@
         <span class="app-icon">🧠</span>
       </a>
 
+      <a href="roblox-english/ai-roblox-slideshow.html" class="app-card" style="text-decoration: none; color: inherit;">
+        <span class="app-icon">🎮</span>
+      </a>
+
       <div class="app-card disabled" style="text-decoration: none; color: inherit;">
       </div>
     </div>
