--- a/roblox-english/ai-roblox-slideshow.html
+++ b/roblox-english/ai-roblox-slideshow.html
@@ -158,10 +158,10 @@
         { id: "build", action: "meme", query: "build meme", x: 0.5141, y: 0.4836, w: 0.1582, h: 0.0721, text: "BUILD" }
       ],
       "10": [
-        { id: "jump_anim", action: "anim", video: "slide-animations/Jump.mov",  x: 0.3277, y: 0.4156, w: 0.1582, h: 0.0721, text: "JUMP" },
-        { id: "run_anim", action: "anim", video: "slide-animations/Run.mov",   x: 0.3277, y: 0.4836, w: 0.1582, h: 0.0721, text: "RUN" },
-        { id: "buy_anim", action: "anim", video: "slide-animations/Buy.mov",   x: 0.5141, y: 0.4156, w: 0.1582, h: 0.0721, text: "BUY" },
-        { id: "build_anim", action: "anim", video: "slide-animations/Build.mov", x: 0.5141, y: 0.4836, w: 0.1582, h: 0.0721, text: "BUILD" }
+        { id: "jump_anim", action: "anim", video: "slide-animations/Jump.mp4",  x: 0.3277, y: 0.4156, w: 0.1582, h: 0.0721, text: "JUMP" },
+        { id: "run_anim", action: "anim", video: "slide-animations/Run.mp4",   x: 0.3277, y: 0.4836, w: 0.1582, h: 0.0721, text: "RUN" },
+        { id: "buy_anim", action: "anim", video: "slide-animations/Buy.mp4",   x: 0.5141, y: 0.4156, w: 0.1582, h: 0.0721, text: "BUY" },
+        { id: "build_anim", action: "anim", video: "slide-animations/Build.mp4", x: 0.5141, y: 0.4836, w: 0.1582, h: 0.0721, text: "BUILD" }
       ]
     };
 
