Update quiz reward meme term

--- a/roblox-english/ai-roblox-slideshow.html
+++ b/roblox-english/ai-roblox-slideshow.html
@@ -249,7 +249,7 @@
         { id: "build_anim", action: "anim", video: "slide-animations/Build.mp4", x: 0.5141, y: 0.4836, w: 0.1582, h: 0.0721, text: "BUILD" }
       ],
       "11": [
-        { id: "quiz_button", action: "quiz", label: "Questions", rewardQuery: "jump meme", questions: QUIZ_QUESTIONS, x: 0.39, y: 0.8, w: 0.22, h: 0.1, text: "QUESTIONS" }
+        { id: "quiz_button", action: "quiz", label: "Questions", rewardQuery: "pixel level complete", questions: QUIZ_QUESTIONS, x: 0.39, y: 0.8, w: 0.22, h: 0.1, text: "QUESTIONS" }
       ]
     };
 
